# src/main/webapp/api/openapi.json
@@ -388,6 +388,14 @@
             "default" : false,
             "type" : "boolean"
           }
+        }, {
+          "in" : "query",
+          "name" : "includeDeferred",
+          "required" : false,
+          "schema" : {
+            "default" : false,
+            "type" : "boolean"
+          }
         } ],
         "responses" : {
           "200" : {
